# confabulation-engine

./: .gitignore  CMakeLists.txt  ConfabulationBase.cpp  ConfabulationBase.h  ConfabulationEngine.pro  ConfabulationStub.cpp  ConfabulationStub.h  ConfabulationTest.cpp  ConfabulationTest.h  Dbg.h  ForwardConfabulation.cpp  ForwardConfabulation.h  Globals.cpp  Globals.h  KnowledgeBase.cpp  KnowledgeBase.h  KnowledgeBase.hpp  KnowledgeBaseN.cpp  KnowledgeBaseN.h  KnowledgeManager.cpp  KnowledgeManager.h  Makefile  Makefile.Debug  Makefile.Release  Module.cpp  Module.h  Module.hpp  MultiLevelOrganizer.cpp  MultiLevelOrganizer.h  NGramHandler.cpp  NGramHandler.h  OneLevelMulticonfabulation.cpp  README.md  SentenceTokenizer.cpp  SentenceTokenizer.h  SymbolAttribute.cpp  SymbolAttribute.h  SymbolMapping.cpp  SymbolMapping.h  TemplateInstantiations.cpp  (+12 more)
core/: ConfabulationBase.cpp  ConfabulationBase.h  ConfabulationTest.cpp  Globals.cpp  Globals.h  MultiLevelOrganizer.cpp  SymbolMapping.cpp  SymbolMapping.h  TwoLevelMultiConfabulation.cpp
google/: sparsetable
google/sparsehash/: config.h  config.h.in  hash_fun.h  sparsehashtable.h
old_impl/: KnowledgeBase.h  KnowledgeManager.cpp  SymbolAttribute.h  TextReader.cpp  TextReader.h
old_models/: OneLevelMultiConfabulation.cpp  OneLevelMultiConfabulation.h
sparse_structures/: CMakeLists.txt  CSCLinksMatrix.cpp  CSCLinksMatrix.h  CSRLinksMatrix.cpp  CSRLinksMatrix.h  CSRLinksMatrix.hpp  CSRLinksMatrixImpl.hpp  CompressedSparseColumnMatrix.cpp  DOKExcitationVector.cpp  DOKExcitationVector.h  DOKExcitationVector.hpp  DOKExcitationVectorImpl.h  DOKExcitationVectorImpl.hpp  DOKLinksMatrix.hpp  IExcitationVector.cpp  IExcitationVector.h  IExcitationVector.hpp  IKnowledgeLinks.cpp  IKnowledgeLinks.h  IKnowledgeLinks.hpp  KHashExcitationVector.hpp  MatrixInterface.cpp  MatrixInterface.h  SparseHashLinksMatrix.hpp  VectorInterface.cpp  VectorInterface.h  compressedsparsecolumnmatrix.h
text_data/: Arabian_Nights_1.txt  Arabian_Nights_10.txt  Arabian_Nights_11.txt  Arabian_Nights_2.txt  Arabian_Nights_3.txt  Arabian_Nights_4.txt  Arabian_Nights_5.txt  Arabian_Nights_6.txt  Arabian_Nights_7.txt  Arabian_Nights_8.txt  Arabian_Nights_9.txt  Balzac_1.txt  Balzac_10.txt  Balzac_11.txt  Balzac_2.txt  Balzac_3.txt  Balzac_4.txt  Balzac_5.txt  Balzac_6.txt  Balzac_7.txt  Balzac_8.txt  Balzac_9.txt  Chesterton_1.txt  Chesterton_10.txt  Chesterton_11.txt  Chesterton_12.txt  Chesterton_14.txt  Chesterton_15.txt  Chesterton_2.txt  Chesterton_3.txt  Chesterton_4.txt  Chesterton_5.txt  Chesterton_6.txt  Chesterton_7.txt  Chesterton_8.txt  Chesterton_9.txt  Conrad_1.txt  Conrad_10.txt  Conrad_11.txt  Conrad_2.txt  (+33 more)
text_processing/: NGramHandler.cpp  NGramHandler.h  SentenceTokenizer.cpp  SentenceTokenizer.h  TextReader.cpp  TextReader.h
utils/: CMakeLists.txt  HashTrie.hpp  HashTrieNode.hpp  Utils.h
